css/main.css
html {
  font-family: Spartan, sans-serif;
}

header {
  background-color: #f2f2f2;
  position: sticky;
  top: 0;
  z-index: 1000;
}

header a {
  color: #000;
  text-decoration: none;
}

h1 {
  color: #0048b9;
}

h2,
h3,
p,
caption,
footer small {
  color: #021e73;
}

.nav a,
footer a {
  color: #021e73;
  text-decoration: none;
}

.nav a {
  padding: .5rem 1rem;
}

.nav a:hover {
  background-color: #010440;
  color: #fff;
}

.nav .current {
  color: #fff;
  background-color: #0048b9;
}

.btn {
  background-color: #010440;
  border: 3px solid #010440;
}

footer {
  background-color: #f2f2f2;
}

footer img {
  max-width: 3rem;
}

.social {
  display: flex;
}

.social img {
  padding: .25rem .5rem;
}

section input {
  max-width: 20rem;
}

.features {
  background-color: rgba(90, 107, 140, .15);
}

.features caption {
  color: #021e73;
}

th,
td {
  color: #021e73;
  border: none;
}

.card {
  border: 2px solid #0048b9;
  max-width: 15rem;
}

.card-title {
  border-bottom: 2px solid #0048b9;
}

.card li {
  color: #021e73;
}

.pricing-btn {
  background-color: #009db9;
  color: #fff;
  padding: .5rem 1rem;
  text-decoration: none;
}

.pricing-btn:hover {
  background-color: #021e73;
}

::placeholder {
  color: #5a6b8c;
}

.free-trial {
  background-color: rgba(90, 107, 140, .15);
}

.learn-more {
  color: #021e73;
  text-decoration: none;
}

.learn-more:hover {
  color: #010440;
  text-decoration: underline;
}

